--- a/api/.env
+++ b/api/.env
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=digital_badge
 DB_USERNAME=postgres
-DB_PASSWORD=IFROOcrxi18$
+DB_PASSWORD=@P011o
 
 # DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
